--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -1,18 +1,32 @@
 <div ng-include=" 'templates/partials/toolbar.html' "></div>
 <div flex layout="row">
   <div ng-include=" 'templates/partials/sidebar.html' "></div>
-  <md-content>
     
+    
+  <div layout-padding>
+    Falta
     <ul>
       <li>Ajuste de rol en usuarios</li>
       <li>catalogo de roles</li>
       <li>Impresion PDF</li>
+      <li>Cambio de username</li>
+      <li>Contraseña</li>
     </ul>
-    
+    Ok
     <ul>
       <li>Administracion de almacen listo</li>
       <li>Administracion de usuarios listo</li>
     </ul>
     
-  </md-content>
+    <md-grid-list md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="2:2" md-gutter="12px" md-gutter-gt-sm="8px" >
+      <md-grid-tile class="dodgerblue" md-rowspan="2" md-colspan="2" md-colspan-sm="1" md-colspan-xs="1">
+        hhh
+      <md-grid-tile-footer>
+        <h3>#5: (2r x 2c)</h3>
+      </md-grid-tile-footer>
+    </md-grid-tile>
+    </md-grid-list>
+    
+    
+  </div>
 </div>
