--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -8,8 +8,8 @@
           <form name="form">
             <md-input-container class="md-block">
               <label>Usuario</label>
-              <input name="user_email" ng-model="user_email" type="email" required autofocus>
-              <div ng-messages="form.user_email.$error">
+              <input name="user_username" ng-model="user_username" type="text" required autofocus>
+              <div ng-messages="form.user_username.$error">
                   <div ng-message="required">Campo requerido.</div>
               </div>
             </md-input-container>
