--- a/templates/customers/customer.html
+++ b/templates/customers/customer.html
@@ -1,9 +1,10 @@
+<div ng-include=" 'templates/partials/back.html' "></div>
 <md-content id="content" layout-align="center" class="md-padding" layout="column">
     <!-- Inicia formulario -->
     <form name="form">
         <md-input-container class="md-block">
             <label>Nombre completo</label>
-            <input name="customer_name" ng-model="customer.customer_name" type="text" md-maxlength="45" capitalize required autofocus>
+            <input name="customer_name" ng-model="item.customer_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
             <div ng-messages="form.customer_name.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -11,7 +12,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 1</label>
-            <input name="customer_address_1" ng-model="customer.customer_address_1" type="text" md-maxlength="45" capitalize required>
+            <input name="customer_address_1" ng-model="item.customer_address_1" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.customer_address_1.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -19,7 +20,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 2</label>
-            <input name="customer_address_2" ng-model="customer.customer_address_2" type="text" md-maxlength="45" capitalize required>
+            <input name="customer_address_2" ng-model="item.customer_address_2" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.customer_address_2.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -27,7 +28,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Código postal</label>
-            <input name="customer_postalcode" ng-model="customer.customer_postalcode" type="text" ng-minlength="5" ng-maxlength="5" ng-pattern="/^[0-9]{5}$/" required>
+            <input name="customer_postalcode" ng-model="item.customer_postalcode" type="text" ng-change="change()" ng-minlength="5" ng-maxlength="5" ng-pattern="/^[0-9]{5}$/" required>
             <div ng-messages="form.customer_postalcode.$error">
                 <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
                     Se requiere un código postal valido
@@ -36,7 +37,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Teléfono</label>
-            <input name="customer_phone" ng-model="customer.customer_phone" type="text" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
+            <input name="customer_phone" ng-model="item.customer_phone" type="text" ng-change="change()" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
             <div ng-messages="form.customer_phone.$error">
                 <div ng-message-exp="['minlength', 'maxlength', 'pattern']">
                     Se requiere un teléfono valido
@@ -45,17 +46,29 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Correo electrónico</label>
-            <input name="customer_email" ng-model="customer.customer_email" type="email" md-maxlength="45" ng-pattern="/^.+@.+\..+$/" required>
+            <input name="customer_email" ng-model="item.customer_email" type="email" ng-change="change()" md-maxlength="45" ng-pattern="/^.+@.+\..+$/" required>
             <div ng-messages="form.customer_email.$error">
                 <div ng-message-exp="['required', 'md-maxlength', 'pattern']">
                     Se requiere un correo electrónico valido
                 </div>
             </div>
         </md-input-container>
+        <md-input-container class="md-block">
+            <label>Descuento %</label>
+            <input name="customer_discount" ng-model="item.customer_discount" type="number" ng-change="change()">
+            <div ng-messages="form.customer_discount.$error">
+                <div ng-message-exp="['required', 'md-maxlength', 'pattern']">
+                    Se requiere un valor valido
+                </div>
+            </div>
+        </md-input-container>
+        <md-switch ng-true-value="1" class="md-primary" ng-model="item.customer_visible" aria-label="habilitado" ng-change="change()">
+            Habilitado
+        </md-switch>
     </form>
     <!-- Termina formulario -->
 </md-content>
-<md-button ng-disabled="!form.$valid" class="md-fab md-warn md-fab-bottom-right" ng-click="save()">        
-    <md-icon> check </md-icon>
-    <md-tooltip md-direction="top"> Guardar </md-tooltip>
-</md-button>
+<md-button  ng-disabled="!form.$valid" class="md-fab md-fab-bottom-right" ng-click="save()">    
+  <md-icon md-svg-icon="check"></md-icon>
+  <md-tooltip md-direction="top"> Aceptar </md-tooltip>
+</md-button> 
