--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -16,6 +16,7 @@
     <ul>
       <li>Administracion de almacen listo</li>
       <li>Administracion de usuarios listo</li>
+      <li>Administracion de proveedores listo</li>
     </ul>
     
     <md-grid-list md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="2:2" md-gutter="12px" md-gutter-gt-sm="8px" >
