--- a/templates/suppliers/supplier.html
+++ b/templates/suppliers/supplier.html
@@ -1,1 +1,62 @@
 <div ng-include=" 'templates/partials/back.html' "></div>
+<md-content id="content" layout-align="center" class="md-padding" layout="column">
+    <!-- Inicia formulario -->
+    <form name="form">
+        <md-input-container class="md-block">
+            <label>Nombre completo</label>
+            <input name="supplier_name" ng-model="item.supplier_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
+            <div ng-messages="form.supplier_name.$error">
+                <div ng-message="required">Campo requerido</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
+            </div>
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Dirección 1</label>
+            <input name="supplier_address_1" ng-model="item.supplier_address_1" type="text" ng-change="change()" md-maxlength="45" required>
+            <div ng-messages="form.supplier_address_1.$error">
+                <div ng-message="required">Campo requerido</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
+            </div>
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Dirección 2</label>
+            <input name="supplier_address_2" ng-model="item.supplier_address_2" type="text" ng-change="change()" md-maxlength="45" required>
+            <div ng-messages="form.supplier_address_2.$error">
+                <div ng-message="required">Campo requerido</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
+            </div>
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Código postal</label>
+            <input name="supplier_postalcode" ng-model="item.supplier_postalcode" type="text" ng-change="change()" ng-minlength="5" ng-maxlength="5" ng-pattern="/^[0-9]{5}$/" required>
+            <div ng-messages="form.supplier_postalcode.$error">
+                <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
+                    Se requiere un código postal valido
+                </div>
+            </div>
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Teléfono</label>
+            <input name="supplier_phone" ng-model="item.supplier_phone" type="text" ng-change="change()" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
+            <div ng-messages="form.supplier_phone.$error">
+                <div ng-message-exp="['minlength', 'maxlength', 'pattern']">
+                    Se requiere un teléfono valido
+                </div>
+            </div>
+        </md-input-container>
+        <md-input-container class="md-block">
+            <label>Correo electrónico</label>
+            <input name="supplier_email" ng-model="item.supplier_email" type="email" ng-change="change()" md-maxlength="45" ng-pattern="/^.+@.+\..+$/">
+            <div ng-messages="form.supplier_email.$error">
+                <div ng-message-exp="['md-maxlength', 'pattern']">
+                    Se requiere un correo electrónico valido
+                </div>
+            </div>
+        </md-input-container>
+    </form>
+    <!-- Termina formulario -->
+</md-content>
+<md-button  ng-disabled="!form.$valid" class="md-fab md-fab-bottom-right" ng-click="save()">    
+  <md-icon md-svg-icon="check"></md-icon>
+  <md-tooltip md-direction="top"> Aceptar </md-tooltip>
+</md-button>  
