--- a/templates/suppliers/supplier.html
+++ b/templates/suppliers/supplier.html
@@ -12,7 +12,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 1</label>
-            <input name="supplier_address_1" ng-model="item.supplier_address_1" type="text" ng-change="change()" md-maxlength="45" required>
+            <input name="supplier_address_1" ng-model="item.supplier_address_1" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.supplier_address_1.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -20,7 +20,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 2</label>
-            <input name="supplier_address_2" ng-model="item.supplier_address_2" type="text" ng-change="change()" md-maxlength="45" required>
+            <input name="supplier_address_2" ng-model="item.supplier_address_2" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.supplier_address_2.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
