prodtucts fix & category

--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -11,6 +11,7 @@
       <li>Impresion PDF</li>
       <li>Cambio de username</li>
       <li>Contraseña</li>
+      <li>Calculo de precios</li>
     </ul>
     Ok
     <ul>
@@ -18,6 +19,7 @@
       <li>Administracion de usuarios listo</li>
       <li>Administracion de proveedores listo</li>
       <li>Administracion de categorias listo</li>
+      <li>Administracion de productos listo</li>
     </ul>
     
     <md-grid-list md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="2:2" md-gutter="12px" md-gutter-gt-sm="8px" >
