--- a/templates/stocks/menu-stocks.html
+++ b/templates/stocks/menu-stocks.html
@@ -4,13 +4,13 @@
     </md-button>
     <md-menu-content width="4">
         <md-menu-item>
-        <md-button ng-click="edit(item.product_id)">
-            <div layout="row"><p flex>Editar producto</p><md-icon md-svg-icon="edit"></md-icon></div>
+        <md-button ng-click="edit(item.stock_id)">
+            <div layout="row"><p flex>Editar entrada</p><md-icon md-svg-icon="edit"></md-icon></div>
         </md-button>
         </md-menu-item>
         <md-menu-item>
-        <md-button ng-click="delete(item.product_id)">
-            <div layout="row"><p flex>Eliminar producto</p><md-icon md-svg-icon="delete"></md-icon></div>
+        <md-button ng-click="delete(item.stock_id)">
+            <div layout="row"><p flex>Eliminar entrada</p><md-icon md-svg-icon="delete"></md-icon></div>
         </md-button>
         </md-menu-item>
     </md-menu-content>
