--- a/templates/app/account.html
+++ b/templates/app/account.html
@@ -3,7 +3,7 @@
     <form name="form">
         <md-input-container class="md-block">
             <label>Nombre completo</label>
-            <input name="account_name" ng-model="account.account_name" type="text" md-maxlength="45" capitalize required autofocus>
+            <input name="account_name" ng-model="item.account_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
             <div ng-messages="form.account_name.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -11,7 +11,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 1</label>
-            <input name="account_address_1" ng-model="account.account_address_1" type="text" md-maxlength="45" capitalize required>
+            <input name="account_address_1" ng-model="item.account_address_1" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.account_address_1.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -19,7 +19,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Dirección 2</label>
-            <input name="account_address_2" ng-model="account.account_address_2" type="text" md-maxlength="45" capitalize required>
+            <input name="account_address_2" ng-model="item.account_address_2" type="text" ng-change="change()" md-maxlength="45" capitalize required>
             <div ng-messages="form.account_address_2.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -27,7 +27,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Código postal</label>
-            <input name="account_postalcode" ng-model="account.account_postalcode" type="text" ng-minlength="5" ng-maxlength="5" ng-pattern="/^[0-9]{5}$/" required>
+            <input name="account_postalcode" ng-model="item.account_postalcode" type="text" ng-change="change()" ng-minlength="5" ng-maxlength="5" ng-pattern="/^[0-9]{5}$/" required>
             <div ng-messages="form.account_postalcode.$error">
                 <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
                     Se requiere un código postal valido
@@ -36,7 +36,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Teléfono</label>
-            <input name="account_phone" ng-model="account.account_phone" type="text" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
+            <input name="account_phone" ng-model="item.account_phone" type="text" ng-change="change()" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
             <div ng-messages="form.account_phone.$error">
                 <div ng-message-exp="['minlength', 'maxlength', 'pattern']">
                     Se requiere un teléfono valido
@@ -45,14 +45,14 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Sitio web</label>
-            <input name="account_web" ng-model="account.account_web" type="text" md-maxlength="45">
+            <input name="account_web" ng-model="item.account_web" type="text" ng-change="change()" md-maxlength="45">
             <div ng-messages="form.account_web.$error">
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
             </div>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Correo electrónico</label>
-            <input name="account_email" ng-model="account.account_email" type="email" md-maxlength="45" ng-pattern="/^.+@.+\..+$/" required>
+            <input name="account_email" ng-model="item.account_email" type="email" ng-change="change()" md-maxlength="45" ng-pattern="/^.+@.+\..+$/" required>
             <div ng-messages="form.account_email.$error">
                 <div ng-message-exp="['required', 'md-maxlength', 'pattern']">
                     Se requiere un correo electrónico valido
@@ -62,7 +62,7 @@
     </form>
     <!-- Termina formulario -->
 </md-content>
-<md-button ng-disabled="!form.$valid" class="md-fab md-warn md-fab-bottom-right" ng-click="save()">        
-    <md-icon> check </md-icon>
-    <md-tooltip md-direction="top"> Guardar </md-tooltip>
+<md-button  ng-disabled="!form.$valid" class="md-fab md-fab-bottom-right" ng-click="save()">    
+  <md-icon md-svg-icon="check"></md-icon>
+  <md-tooltip md-direction="top"> Aceptar </md-tooltip>
 </md-button>
