--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -20,6 +20,7 @@
       <li>Administracion de proveedores listo</li>
       <li>Administracion de categorias listo</li>
       <li>Administracion de productos listo</li>
+      <li>Datos de la cuenta</li>
     </ul>
     
     <md-grid-list md-cols-xs="1" md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="2:2" md-gutter="12px" md-gutter-gt-sm="8px" >
