--- a/templates/stocks/stocks.html
+++ b/templates/stocks/stocks.html
@@ -15,11 +15,11 @@
         <md-subheader>Entradas</md-subheader>
           <md-list-item md-ink-ripple class="md-3-line" ng-repeat="item in items | filter: searchQuery">
             <div class="md-list-item-text" layout="column">
-              <h3 class="dodgerblue">{{ item.category_name | uppercase }}</h3>
-              <h4>{{ item.category_description | uppercase }}</h4>
-              <p>{{ item.product_count }} lineas</p>
+              <h3 class="dodgerblue">{{ item.product_name | uppercase }}</h3>
+              <h4>{{ item.store_name | uppercase }}</h4>
+              <p>{{ item.stock_quantity | number }} {{ item.unit_name }}s - {{ item.stock_price | currency }}</p>
             </div>
-            <div class="md-secondary md-icon-button" ng-include=" 'templates/partials/menu-stocks.html' "></div>
+            <div class="md-secondary md-icon-button" ng-include=" 'templates/stocks/menu-stocks.html' "></div>
             <md-divider ng-if="!$last"></md-divider>
           </md-list-item>
       </md-list>
