--- a/templates/app/password.html
+++ b/templates/app/password.html
@@ -1,3 +1,4 @@
+<div ng-include=" 'templates/partials/back.html' "></div>
 <md-content id="content" layout-align="center" class="md-padding" layout="column">
     <!-- Inicia formulario -->
     <form name="form">
@@ -20,7 +21,7 @@
     </form>
     <!-- Termina formulario -->
 </md-content>
-<md-button ng-disabled="!form.$valid" class="md-fab md-warn md-fab-bottom-right" ng-click="save()">        
-    <md-icon> check </md-icon>
-    <md-tooltip md-direction="top"> Guardar </md-tooltip>
-</md-button>
+<md-button  ng-disabled="!form.$valid" class="md-fab md-fab-bottom-right" ng-click="save()">    
+  <md-icon md-svg-icon="check"></md-icon>
+  <md-tooltip md-direction="top"> Aceptar </md-tooltip>
+</md-button>  
