--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -11,6 +11,7 @@
       <li>Impresion PDF</li>
       <li>Cambio de username</li>
       <li>Contraseña</li>
+      <li>Nombre de la empresa</li>
       <li>Calculo de precios</li>
     </ul>
     Ok
