--- a/templates/partials/toolbar.html
+++ b/templates/partials/toolbar.html
@@ -3,7 +3,8 @@
     <md-button class="md-icon-button" ng-click="toggleSidenav('left')" aria-label="Menu">
       <md-icon md-svg-icon="menu"></md-icon>
     </md-button>
-    <h3>Consola de administración</h3>
+    <h3>{{ account_name }}</h3>
     <span flex></span>
+    <p class="small">{{ profile_name }}</p>
   </div>
 </md-toolbar>
