--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -12,6 +12,7 @@
         <md-card-content-text>
           <ul>
             <li>{{ account_name }}</li>
+            <li>{{ profile_name }}</li>
           </ul>
         </md-card-content-text>
       </md-card-content>
