--- a/templates/app/account.html
+++ b/templates/app/account.html
@@ -1,3 +1,4 @@
+<div ng-include=" 'templates/partials/back.html' "></div>
 <md-content id="account" layout-align="center" class="md-padding" layout="column">
     <!-- Inicia formulario -->
     <form name="form">
