--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -11,7 +11,7 @@
       <md-card-content>
         <md-card-content-text>
           <ul>
-            <li>{{ account_name }}</li>
+            <li><strong>{{ account_name }}</strong></li>
             <li>{{ profile_name }}</li>
           </ul>
         </md-card-content-text>
