--- a/templates/products/product.html
+++ b/templates/products/product.html
@@ -13,10 +13,10 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Nombre completo</label>
-            <input name="product_name" ng-model="item.product_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
+            <input name="product_name" ng-model="item.product_name" type="text" ng-change="change()" md-maxlength="95" capitalize required autofocus>
             <div ng-messages="form.product_name.$error">
                 <div ng-message="required">Campo requerido</div>
-                <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 95 caracteres de longitud</div>
             </div>
         </md-input-container>
         <md-input-container class="md-block" flex-gt-xs>
@@ -30,16 +30,17 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Clave</label>
-            <input name="product_key" ng-model="item.product_key" type="text" ng-change="change()" md-maxlength="5" capitalize>
+            <input name="product_key" ng-model="item.product_key" type="text" ng-change="change()" md-maxlength="15" capitalize required>
             <div ng-messages="form.product_key.$error">
-                <div ng-message="md-maxlength">El campo debe de ser de menos de 5 caracteres de longitud</div>
+                <div ng-message="required">Campo requerido</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 15 caracteres de longitud</div>
             </div>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Descripción</label>
-            <input name="product_description" ng-model="item.product_description" type="text" ng-change="change()" md-maxlength="45" capitalize>
+            <input name="product_description" ng-model="item.product_description" type="text" ng-change="change()" md-maxlength="95" capitalize>
             <div ng-messages="form.product_description.$error">
-                <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
+                <div ng-message="md-maxlength">El campo debe de ser de menos de 95 caracteres de longitud</div>
             </div>
         </md-input-container>
         <md-input-container class="md-block">
