--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -31,6 +31,7 @@
             <li>Impresion PDF</li>
             <li>Cambio de usuario</li>
             <li>Contraseña</li>
+            <li>Descripción en producto</li>
             <li class="line-through">Nombre de la empresa</li>
             <li>Calculo de precios</li>
             <li class="line-through">Administracion de almacen listo</li>
