--- a/templates/partials/toolbar.html
+++ b/templates/partials/toolbar.html
@@ -13,7 +13,7 @@
           <md-menu-content width="4">
             <md-menu-item>
             <md-button ng-click="go('my')">
-                <div layout="row"><p flex>Perfil</p></div>
+                <div layout="row"><p flex>Mi perfil</p></div>
             </md-button>
             </md-menu-item>
             <md-menu-item>
