--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -12,6 +12,7 @@
         <md-card-content-text>
           <ul>
             <li><strong>{{ account_name }}</strong></li>
+            <li>{{ account_email }}</li>
             <li>{{ profile_name }}</li>
           </ul>
         </md-card-content-text>
@@ -30,15 +31,15 @@
             <li>Catalogo de roles</li>
             <li>Impresion PDF</li>
             <li>Cambio de usuario</li>
-            <li>Contraseña</li>
+            <li class="line-through">Contraseña</li>
             <li>Descripción en producto</li>
             <li class="line-through">Nombre de la empresa</li>
             <li>Calculo de precios</li>
-            <li class="line-through">Administracion de almacen listo</li>
-            <li class="line-through">Administracion de usuarios listo</li>
-            <li class="line-through">Administracion de proveedores listo</li>
-            <li class="line-through">Administracion de categorias listo</li>
-            <li>Administracion de productos listo</li>
+            <li class="line-through">Administracion de almacen</li>
+            <li class="line-through">Administracion de usuarios</li>
+            <li class="line-through">Administracion de proveedores</li>
+            <li class="line-through">Administracion de categorias</li>
+            <li>Administracion de productos</li>
             <li class="line-through">Datos de la cuenta</li>
           </ul>
         </md-card-content-text>
