--- a/templates/app/password.html
+++ b/templates/app/password.html
@@ -4,7 +4,7 @@
     <form name="form">
         <md-input-container class="md-block">
             <label>Contraseña</label>
-            <input name="profile_password_1" ng-model="profile.profile_password_1" type="password" ng-minlength="8" ng-maxlength="20" required autofocus>
+            <input name="profile_password_1" ng-model="item.profile_password_1" type="password" ng-change="change()" ng-minlength="8" ng-maxlength="20" required autofocus>
             <div ng-messages="form.profile_password_1.$error">
                 <div ng-message-exp="['minlength', 'maxlength', 'required']">
                     Se requiere una contraseña valida de minimo 8 y maximo 20 caracteres de longitud
@@ -13,7 +13,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Confirmación</label>
-            <input name="profile_password_2" ng-model="profile.profile_password_2" type="password" ng-minlength="8" ng-maxlength="20" required repeat-password="profile_password_1">
+            <input name="profile_password_2" ng-model="item.profile_password_2" type="password" ng-change="change()" ng-minlength="8" ng-maxlength="20" required repeat-password="profile_password_1">
             <div ng-messages="form.profile_password_2.$error">
                 <div ng-message="repeat">No son iguales los campos</div>
             </div>
