--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -14,6 +14,7 @@
             <li><strong>{{ account_name }}</strong></li>
             <li>{{ account_email }}</li>
             <li>{{ profile_name }}</li>
+            <li>IP: {{ ip_address }}</li>
           </ul>
         </md-card-content-text>
       </md-card-content>
