--- a/templates/invoices/invoice.html
+++ b/templates/invoices/invoice.html
@@ -2,10 +2,24 @@
 <md-content id="content" layout-align="center" class="md-padding" layout="column">
     <!-- Inicia formulario -->
     <form name="form">
+      <div layout-gt-sm="row">  
+        <md-input-container class="md-block" flex-gt-xs>
+            <label>Cliente</label>
+            <md-select ng-model="item.customer_id" ng-change="change()">
+                <md-option ng-repeat="customer in customers" value="{{ customer.customer_id }}">
+                {{ customer.customer_name }}
+                </md-option>
+            </md-select>
+            <br>
+        </md-input-container>
         <md-input-container class="md-block">
-            <label>Nombre completo</label>
-            <input name="category_name" ng-model="item.category_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
-            <div ng-messages="form.category_name.$error">
+            {{ item.sale_timestamp | date : 'medium'}}  
+        </md-input-container>
+      </div>
+        <md-input-container class="md-block">
+            <label>Fecha</label>
+            <input name="sale_timestamp" ng-model="item.sale_timestamp" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
+            <div ng-messages="form.sale_timestamp.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
             </div>
@@ -17,9 +31,6 @@
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
             </div>
         </md-input-container>
-        <md-switch ng-true-value="1" class="md-primary" ng-model="item.category_visible" aria-label="habilitado" ng-change="change()">
-            Habilitado
-        </md-switch>
     </form>
     <!-- Termina formulario -->
 </md-content>
