--- a/templates/invoices/menu-invoices.html
+++ b/templates/invoices/menu-invoices.html
@@ -4,12 +4,12 @@
     </md-button>
     <md-menu-content width="4">
         <md-menu-item>
-        <md-button ng-click="edit(item.invoice_id)">
+        <md-button ng-click="edit(item.sale_id)">
             <div layout="row"><p flex>Editar venta</p><md-icon md-svg-icon="edit"></md-icon></div>
         </md-button>
         </md-menu-item>
         <md-menu-item>
-        <md-button ng-click="delete(item.invoice_id)">
+        <md-button ng-click="delete(item.sale_id)">
             <div layout="row"><p flex>Eliminar venta</p><md-icon md-svg-icon="delete"></md-icon></div>
         </md-button>
         </md-menu-item>
